# timeseries_tool

./: .gitignore  Dockerfile  README.md  pyproject.toml  streamlit_app.py
examples/: Antibiotics.csv  Antidepressants.csv
src/ts_anomaly/: pipeline.py
src/ts_anomaly_app/: app.py
