[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-anomaly"
version = "0.1.0"
description = "Time-series forecasting and anomaly detection (VAR/SARIMAX) with Streamlit UI"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "statsmodels",
  "scikit-learn",
]

[project.optional-dependencies]
app = ["streamlit"]
bsts = ["orbit-ml"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
